<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JoinActivity">

    <EditText
        android:id="@+id/edtRegisterId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/tv_joinid"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edtRegisterNick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/edtRegisterNick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/tv_joinnick"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edtRegisterPw"
        app:layout_constraintEnd_toEndOf="@+id/edtRegisterId"
        app:layout_constraintStart_toStartOf="@+id/edtRegisterId"
        app:layout_constraintTop_toBottomOf="@+id/edtRegisterId" />

    <EditText
        android:id="@+id/edtRegisterPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/tv_joinpw"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="@+id/edtRegisterNick"
        app:layout_constraintStart_toStartOf="@+id/edtRegisterNick"
        app:layout_constraintTop_toBottomOf="@+id/edtRegisterNick" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/btn_resjoin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edtRegisterPw"
        app:layout_constraintStart_toStartOf="@+id/edtRegisterPw"
        app:layout_constraintTop_toBottomOf="@+id/edtRegisterPw" />


</androidx.constraintlayout.widget.ConstraintLayout>